GNOME Bugzilla – Bug 722840
Crash _shell_app_remove_window()
Last modified: 2014-01-23 17:46:10 UTC
Created attachment 267056 [details] gnome-shell backtrace I can consistently crash gnome-shell (built from git today) by crashing gnome-chess in the following way: * Launch gnome-chess * Click on Open as if to load a saved game * Remove the filter for PGN files in the bottom right of the file chooser * Select an image file instead of a PGN file and try to open it This is a known bug in gnome-chess that I've been meaning to fix for ages. But this has never crashed gnome-shell before.
Created attachment 267064 [details] [review] shell-app: Unref running state when window count drops to zero With the lastest ShellApp changes, an app is considered stopped when the last "interesting" window is closed. However the app may still track non-interesting windows, so if we unref the running state on the state transition, we hit an assertion later-on when trying to remove the non-interesting window. Fix this by keeping the running state around until the last window is closed.
Review of attachment 267064 [details] [review]: OK.
Attachment 267064 [details] pushed as 73f6e75 - shell-app: Unref running state when window count drops to zero